--- a/index.html
+++ b/index.html
@@ -566,7 +566,7 @@
     <div>
       <footer>
         <div class="legal">
-          <p class="copy">Copyright &copy 2024 Todos los derechos reservados</p>
+          <p class="copy">Copyright &copy; 2024 Todos los derechos reservados</p>
           <p><a href="#">Terminos y Condiciones</a></p>
           <p><a href="#">Privacidad</a></p>
         </div>
