Quite / final de los img

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="header-container container-sm .container-md .container-xl">
       <header class="header">
         <div class="brand">
-          <a href="#"><img src="img/logo2.png" alt="" class="brand-logo" /></a>
+          <a href="#"><img src="img/logo2.png" alt="" class="brand-logo"></a>
           <div class="brand-name">
             <h2><a href="#">LuzCámaraCrítica</a></h2>
           </div>
@@ -50,7 +50,7 @@
       <main>
         <section>
           <div class="banner">
-            <img src="./img/banners/22222222.png" alt="" />
+            <img src="./img/banners/22222222.png" alt="">
           </div>
         </section>
         <section class="peliculas">
@@ -61,7 +61,7 @@
               <div class="col-lg-3 col-md-4 col-sm-6 col-12 card1">
                 <div class="card" style="width: 17rem">
                   <a href="#"
-                    ><img src="img/dune2.jpg" class="card-img-top" alt="..." />
+                    ><img src="img/dune2.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <p class="card-text">DUNE Part 2</p>
                     </div>
@@ -87,7 +87,7 @@
                       src="img/godzillaykong.jpg"
                       class="card-img-top"
                       alt="..."
-                    />
+                    >
                     <div class="card-body">
                       <p class="card-text">GODZILLA y KONG: Un nuevo impero</p>
                     </div>
@@ -114,7 +114,7 @@
               <div class="col-lg-3 col-md-4 col-sm-6 col-12 card3">
                 <div class="card" style="width: 17rem">
                   <a href="#">
-                    <img src="img/ferrari.jpg" class="card-img-top" alt="..." />
+                    <img src="img/ferrari.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <p class="card-text">FERRARI</p>
                     </div>
@@ -141,7 +141,7 @@
                       src="img/rescateImposible.jpg"
                       class="card-img-top"
                       alt="..."
-                    />
+                    >
                     <div class="card-body">
                       <p class="card-text">Rescate Imposible (2024)</p>
                     </div>
@@ -173,7 +173,7 @@
                       src="img/hungergames.jpg"
                       class="card-img-top"
                       alt="..."
-                    />
+                    >
                     <div class="card-body">
                       <p class="card-text">
                         LOS JUEGOS DEL HAMBRE: Balada de pájaros cantores...
@@ -208,7 +208,7 @@
                       src="img/ghostbusters.jpg"
                       class="card-img-top"
                       alt="..."
-                    />
+                    >
                     <div class="card-body">
                       <p class="card-text">
                         GHOSTBUSTERS: Apocalipsis fantasma
@@ -239,7 +239,7 @@
                       src="img/laultimaprofe.jpg"
                       class="card-img-top"
                       alt="..."
-                    />
+                    >
                     <div class="card-body">
                       <p class="card-text">LA PRIMERA PROFESÍA</p>
                     </div>
@@ -263,7 +263,7 @@
                       src="img/secretos.jpg"
                       class="card-img-top"
                       alt="..."
-                    />
+                    >
                     <div class="card-body">
                       <p class="card-text">Secretos de un escándalo</p>
                     </div>
@@ -288,7 +288,7 @@
                       src="img/contacto.jpg"
                       class="card-img-top"
                       alt="..."
-                    />
+                    >
                     <div class="card-body">
                       <p class="card-text">Baghead: Contacto con la muerte</p>
                     </div>
@@ -319,7 +319,7 @@
                       src="img/aquaman.jpeg"
                       class="card-img-top"
                       alt="..."
-                    />
+                    >
                     <div class="card-body">
                       <p class="card-text">AQUAMAN 2</p>
                     </div>
@@ -349,7 +349,7 @@
                       src="img/madameweb.jpg"
                       class="card-img-top"
                       alt="..."
-                    />
+                    >
                     <div class="card-body">
                       <p class="card-text">MADAME WEB</p>
                     </div>
@@ -369,7 +369,7 @@
               <div class="col-lg-3 col-md-4 col-sm-6 col-12 card12">
                 <div class="card" style="width: 17rem">
                   <a href="#"
-                    ><img src="img/Despuesdelamuerte.jpg" class="card-img-top" alt="..." />
+                    ><img src="img/Despuesdelamuerte.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <p class="card-text">Después de la muerte</p>
                     </div>
@@ -398,7 +398,7 @@
         </section>
         <section>
           <div class="banner1">
-            <img src="./img/banners/333333.png" alt="" />
+            <img src="./img/banners/333333.png" alt="">
           </div>
         </section>
         <section class="series">
@@ -409,7 +409,7 @@
               <div class="col-lg-3 col-md-4 col-sm-6 col-12 card1">
                 <div class="card" style="width: 17rem">
                   <a href="#"
-                    ><img src="img/dune2.jpg" class="card-img-top" alt="..." />
+                    ><img src="img/dune2.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <p class="card-text">DUNE Part 2</p>
                     </div>
@@ -423,7 +423,7 @@
                       src="img/godzillaykong.jpg"
                       class="card-img-top"
                       alt="..."
-                    />
+                    >
                     <div class="card-body">
                       <p class="card-text">GODZILLA y KONG: Un nuevo impero</p>
                     </div>
@@ -443,7 +443,7 @@
               <div class="col-lg-3 col-md-4 col-sm-6 col-12 card4">
                 <div class="card" style="width: 17rem">
                   <a href="#"
-                    ><img src="img/dune2.jpg" class="card-img-top" alt="..." />
+                    ><img src="img/dune2.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <p class="card-text">DUNE Part 2</p>
                     </div>
@@ -458,7 +458,7 @@
                       src="img/hungergames.jpg"
                       class="card-img-top"
                       alt="..."
-                    />
+                    >
                     <div class="card-body">
                       <p class="card-text">
                         LOS JUEGOS DEL HAMBRE: Balada de pájaros cantores y
@@ -475,7 +475,7 @@
                       src="img/ghostbusters.jpg"
                       class="card-img-top"
                       alt="..."
-                    />
+                    >
                     <div class="card-body">
                       <p class="card-text">
                         GHOSTBUSTERS: Apocalipsis fantasma
@@ -491,7 +491,7 @@
                       src="img/laultimaprofe.jpg"
                       class="card-img-top"
                       alt="..."
-                    />
+                    >
                     <div class="card-body">
                       <p class="card-text">LA PRIMERA PROFESÍA</p>
                     </div>
@@ -501,7 +501,7 @@
               <div class="col-lg-3 col-md-4 col-sm-6 col-12 card8">
                 <div class="card" style="width: 17rem">
                   <a href="#"
-                    ><img src="img/dune2.jpg" class="card-img-top" alt="..." />
+                    ><img src="img/dune2.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <p class="card-text">DUNE Part 2</p>
                     </div>
@@ -512,7 +512,7 @@
               <div class="col-lg-3 col-md-4 col-sm-6 col-12 card9">
                 <div class="card" style="width: 17rem">
                   <a href="#"
-                    ><img src="img/dune2.jpg" class="card-img-top" alt="..." />
+                    ><img src="img/dune2.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <p class="card-text">DUNE Part 2</p>
                     </div>
@@ -526,7 +526,7 @@
                       src="img/aquaman.jpeg"
                       class="card-img-top"
                       alt="..."
-                    />
+                    >
                     <div class="card-body">
                       <p class="card-text">AQUAMAN 2</p>
                     </div>
@@ -540,7 +540,7 @@
                       src="img/madameweb.jpg"
                       class="card-img-top"
                       alt="..."
-                    />
+                    >
                     <div class="card-body">
                       <p class="card-text">MADAME WEB</p>
                     </div>
@@ -550,7 +550,7 @@
               <div class="col-lg-3 col-md-4 col-sm-6 col-12 card12">
                 <div class="card" style="width: 17rem">
                   <a href="#"
-                    ><img src="img/dune2.jpg" class="card-img-top" alt="..." />
+                    ><img src="img/dune2.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <p class="card-text">DUNE Part 2</p>
                     </div>
