--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
 
     <div class="main-content">
       <main>
-        <section>
+        <div>
           <div class="banner">
             <img src="./img/banners/22222222.png" alt="">
           </div>
-        </section>
+        </div>
         <section class="peliculas">
           <h3>Películas destacadas</h3>
           <div class="grid-pelis">
@@ -396,11 +396,11 @@
             </div>
           </div>
         </section>
-        <section>
+        <div>
           <div class="banner1">
             <img src="./img/banners/333333.png" alt="">
           </div>
-        </section>
+        </div>
         <section class="series">
           <h3>Series destacadas</h3>
           <div class="grid-serie">
@@ -433,7 +433,7 @@
               <div class="col-lg-3 col-md-4 col-sm-6 col-12 card3">
                 <div class="card" style="width: 17rem">
                   <a href="#">
-                    <img src="img/ferrari.jpg" class="card-img-top" alt="..." />
+                    <img src="img/ferrari.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <p class="card-text">FERRARI</p>
                     </div>
