Arregle la galeria de fotos

--- a/pages/acercaDe.html
+++ b/pages/acercaDe.html
@@ -30,9 +30,9 @@
     <div class="header-container container-sm .container-md .container-xl">
       <header class="header">
         <div class="brand">
-          <a href="#"><img src="/img/logo2.png" alt="" class="brand-logo" /></a>
+          <a href="#"><img src="../img/logo2.png" alt="" class="brand-logo"></a>
           <div class="brand-name">
-            <h2><a href="/index.html">LuzCámaraCrítica</a></h2>
+            <h2><a href="../index.html">LuzCámaraCrítica</a></h2>
           </div>
         </div>
         <nav class="menu">
@@ -88,43 +88,43 @@
   
   <div class="gallery">
         <div class="image-container">
-            <img src="/img/acercade/154818.png">
+            <img src="../img/acercade/154818.png">
         </div>
         <div class="image-container">
-            <img src="/img/acercade/154932.png">
+            <img src="../img/acercade/154932.png">
         </div>
         <div class="image-container tall">
-            <img src="/img/acercade/Captura de pantalla 2024-05-03 183632.png">
+            <img src="../img/acercade/Captura de pantalla 2024-05-03 183632.png">
         </div>
         <div class="image-container">
-            <img src="/img/acercade/crewcine640.jpg">
+            <img src="../img/acercade/crewcine640.jpg">
         </div>
         <div class="image-container">
-            <img src="/img/acercade/EXCj02lXgAI7ZO1.jpg">
+            <img src="../img/acercade/EXCj02lXgAI7ZO1.jpg">
         </div>
         <div class="image-container tall">
-            <img src="/img/acercade/images (2).jpg">
+            <img src="../img/acercade/images (2).jpg">
         </div>
         <div class="image-container">
-            <img src="/img/acercade/images (1).jpg">
+            <img src="../img/acercade/images (1).jpg">
         </div>
         <div class="image-container">
-            <img src="/img/acercade/images.jpg">
+            <img src="../img/acercade/images.jpg">
         </div>
         <div class="image-container">
-            <img src="/img/acercade/istockphoto-1423857563-640x640.jpg">
+            <img src="../img/acercade/istockphoto-1423857563-640x640.jpg">
         </div>
         <div class="image-container">
-          <img src="/img/acercade/stock-photo-happy-businesspeople-laughing-while-collaborating-on-a-new-project-in-an-office-group-of-diverse-2159023891.jpg">
+          <img src="../img/acercade/stock-photo-happy-businesspeople-laughing-while-collaborating-on-a-new-project-in-an-office-group-of-diverse-2159023891.jpg">
       </div>
       <div class="image-container tall">
-        <img src="/img/acercade/im77777ages.png">
+        <img src="../img/acercade/im77777ages.png">
     </div>
     <div class="image-container">
-      <img src="/img/acercade/images (3).jpg">
+      <img src="../img/acercade/images (3).jpg">
   </div>
   <div class="image-container">
-    <img src="/img/acercade/albert-y-david-maysles.jpg">
+    <img src="../img/acercade/albert-y-david-maysles.jpg">
 </div>
   </div>
     
@@ -132,7 +132,7 @@
     <div>
       <footer>
         <div class="legal">
-          <p class="copy">Copyright &copy 2024 Todos los derechos reservados</p>
+          <p class="copy">Copyright &copy; 2024 Todos los derechos reservados</p>
           <p><a href="#">Terminos y Condiciones</a></p>
           <p><a href="#">Privacidad</a></p>
         </div>
