--- a/pages/acercaDe.html
+++ b/pages/acercaDe.html
@@ -88,43 +88,43 @@
   
   <div class="gallery">
         <div class="image-container">
-            <img src="../img/acercade/154818.png">
+            <img src="../img/acercade/154818.png" alt="Personas sentadas en el cine">
         </div>
         <div class="image-container">
-            <img src="../img/acercade/154932.png">
+            <img src="../img/acercade/154932.png" alt="Un camarógrafo trabajando">
         </div>
         <div class="image-container tall">
-            <img src="../img/acercade/Captura de pantalla 2024-05-03 183632.png">
+            <img src="../img/acercade/Captura de pantalla 2024-05-03 183632.png" alt="Una persona sentado en el cine">
         </div>
         <div class="image-container">
-            <img src="../img/acercade/crewcine640.jpg">
+            <img src="../img/acercade/crewcine640.jpg" alt="Productores trabajando">
         </div>
         <div class="image-container">
-            <img src="../img/acercade/EXCj02lXgAI7ZO1.jpg">
+            <img src="../img/acercade/EXCj02lXgAI7ZO1.jpg" alt="Personas mirando una película">
         </div>
         <div class="image-container tall">
-            <img src="../img/acercade/images (2).jpg">
+            <img src="../img/acercade/images (2).jpg" alt="Director de cine">
         </div>
         <div class="image-container">
-            <img src="../img/acercade/images (1).jpg">
+            <img src="../img/acercade/images (1).jpg" alt="Mujer con un micrófono">
         </div>
         <div class="image-container">
-            <img src="../img/acercade/images.jpg">
+            <img src="../img/acercade/images.jpg" alt="Camarógrafo">
         </div>
         <div class="image-container">
-            <img src="../img/acercade/istockphoto-1423857563-640x640.jpg">
+            <img src="../img/acercade/istockphoto-1423857563-640x640.jpg" alt="Personas en una reunión de trabajo">
         </div>
         <div class="image-container">
-          <img src="../img/acercade/stock-photo-happy-businesspeople-laughing-while-collaborating-on-a-new-project-in-an-office-group-of-diverse-2159023891.jpg">
+          <img src="../img/acercade/stock-photo-happy-businesspeople-laughing-while-collaborating-on-a-new-project-in-an-office-group-of-diverse-2159023891.jpg" alt="Personas trabajando">
       </div>
       <div class="image-container tall">
-        <img src="../img/acercade/im77777ages.png">
+        <img src="../img/acercade/im77777ages.png" alt="Creemos en el cine en todas sus formas de expresión">
     </div>
     <div class="image-container">
-      <img src="../img/acercade/images (3).jpg">
+      <img src="../img/acercade/images (3).jpg" alt="Productores de cine">
   </div>
   <div class="image-container">
-    <img src="../img/acercade/albert-y-david-maysles.jpg">
+    <img src="../img/acercade/albert-y-david-maysles.jpg" alt="Albert y David Maysles">
 </div>
   </div>
     
