Saque los espacios de los nombres de las img

--- a/pages/acercaDe.html
+++ b/pages/acercaDe.html
@@ -94,7 +94,7 @@
             <img src="../img/acercade/154932.png" alt="Un camarógrafo trabajando">
         </div>
         <div class="image-container tall">
-            <img src="../img/acercade/Captura de pantalla 2024-05-03 183632.png" alt="Una persona sentado en el cine">
+            <img src="../img/acercade/Captura_de_pantalla.png" alt="Una persona sentado en el cine">
         </div>
         <div class="image-container">
             <img src="../img/acercade/crewcine640.jpg" alt="Productores trabajando">
@@ -103,10 +103,10 @@
             <img src="../img/acercade/EXCj02lXgAI7ZO1.jpg" alt="Personas mirando una película">
         </div>
         <div class="image-container tall">
-            <img src="../img/acercade/images (2).jpg" alt="Director de cine">
+            <img src="../img/acercade/images(2).jpg" alt="Director de cine">
         </div>
         <div class="image-container">
-            <img src="../img/acercade/images (1).jpg" alt="Mujer con un micrófono">
+            <img src="../img/acercade/images(1).jpg" alt="Mujer con un micrófono">
         </div>
         <div class="image-container">
             <img src="../img/acercade/images.jpg" alt="Camarógrafo">
@@ -121,7 +121,7 @@
         <img src="../img/acercade/im77777ages.png" alt="Creemos en el cine en todas sus formas de expresión">
     </div>
     <div class="image-container">
-      <img src="../img/acercade/images (3).jpg" alt="Productores de cine">
+      <img src="../img/acercade/images(3).jpg" alt="Productores de cine">
   </div>
   <div class="image-container">
     <img src="../img/acercade/albert-y-david-maysles.jpg" alt="Albert y David Maysles">
