--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     >
   </head>
 
-  <body class="body-content">
+<body class="body-content">
     <div class="header-container container-sm .container-md .container-xl">
       <header class="header">
         <div class="brand">
@@ -38,8 +38,8 @@
           <ul>
             <li><a href="#">Inicio</a></li>
             <li><a href="pages/acercaDe.html">Acerca de</a></li>
-            <li><a href="#">Series</a></li>
-            <li><a href="#">Películas</a></li>
+            <li><a href="pages/series.html">Series</a></li>
+            <li><a href="pages/peliculas.html">Películas</a></li>
             <li><a href="#">Contacto</a></li>
           </ul>
         </nav>
