--- a/pages/acercaDe.html
+++ b/pages/acercaDe.html
@@ -39,8 +39,8 @@
           <ul>
             <li><a href="../index.html">Inicio</a></li>
             <li><a href="#">Acerca de</a></li>
-            <li><a href="#">Series</a></li>
-            <li><a href="#">Películas</a></li>
+            <li><a href="series.html">Series</a></li>
+            <li><a href="peliculas.html">Películas</a></li>
             <li><a href="#">Contacto</a></li>
           </ul>
         </nav>
