creo la pagina de registro con formulario y validacion js. Agrego una animacion a la marca

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <li><a href="pages/acercaDe.html">Acerca de</a></li>
             <li><a href="pages/series.html">Series</a></li>
             <li><a href="pages/peliculas.html">Películas</a></li>
-            <li><a href="#">Contacto</a></li>
+            <li><a href="pages/registro.html">Registro</a></li>
           </ul>
         </nav>
       </header>
