--- a/pages/acercaDe.html
+++ b/pages/acercaDe.html
@@ -48,10 +48,10 @@
       <nav class="menu">
         <ul>
           <li><a href="../index.html">Inicio</a></li>
-          <li><a href="#">Acerca de</a></li>
+          <li><a href="acercaDe.html">Acerca de</a></li>
           <li><a href="series.html">Series</a></li>
           <li><a href="peliculas.html">Películas</a></li>
-          <li><a href="#">Contacto</a></li>
+          <li><a href="registro.html">Registro</a></li>
         </ul>
       </nav>
     </header>
