--- a/pages/peliculas.html
+++ b/pages/peliculas.html
@@ -39,8 +39,8 @@
                     <li><a href="../index.html">Inicio</a></li>
                     <li><a href="acercaDe.html">Acerca de</a></li>
                     <li><a href="series.html">Series</a></li>
-                    <li><a href="#">Películas</a></li>
-                    <li><a href="#">Contacto</a></li>
+                    <li><a href="peliculas.html">Películas</a></li>
+                    <li><a href="registro.html">Registro</a></li>
                 </ul>
             </nav>
         </header>
