--- a/pages/registro.html
+++ b/pages/registro.html
@@ -38,18 +38,18 @@
 <body class="body-content-registro">
   <header class="header">
     <div class="brand">
-      <a href="/index.html"><img src="/img/logo2.png" alt="" class="brand-logo" /></a>
+      <a href="../index.html"><img src="/img/logo2.png" alt="" class="brand-logo" /></a>
       <div class="brand-name">
-        <h2><a href="/index.html"><span id="luz">Luz</span><span id="camara">Cámara</span><span id="critica">Crítica</span></a></h2>
+        <h2><a href="../index.html"><span id="luz">Luz</span><span id="camara">Cámara</span><span id="critica">Crítica</span></a></h2>
       </div>
     </div>
     <nav class="menu">
       <ul>
-        <li><a href="/index.html">Inicio</a></li>
-        <li><a href="#">Películas</a></li>
-        <li><a href="#">Series</a></li>
-        <li><a href="/pages/registro.html">Registro</a></li>
-        <li><a href="/pages/acercaDe.html">Acerca de</a></li>
+        <li><a href="../index.html">Inicio</a></li>
+        <li><a href="acercaDe.html">Acerca de</a></li>
+        <li><a href="series.html">Series</a></li>
+        <li><a href="peliculas.html">Películas</a></li>
+        <li><a href="registro.html">Registro</a></li>
       </ul>
     </nav>
   </header>
