--- a/pages/series.html
+++ b/pages/series.html
@@ -38,9 +38,9 @@
                 <ul>
                     <li><a href="../index.html">Inicio</a></li>
                     <li><a href="acercaDe.html">Acerca de</a></li>
-                    <li><a href="#">Series</a></li>
+                    <li><a href="series.html">Series</a></li>
                     <li><a href="peliculas.html">Películas</a></li>
-                    <li><a href="#">Contacto</a></li>
+                    <li><a href="registro.html">Registro</a></li>
                 </ul>
             </nav>
         </header>
