cambios en series y form

--- a/index.html
+++ b/index.html
@@ -510,7 +510,7 @@
         <p><a href="#">Privacidad</a></p>
       </div>
       <div class="redes">
-        <p>eMail</p>
+        <p>LuzCámaraCrítica@gmail.com</p>
         <a href="#"><i class="fa fa-envelope-o" style="color: #ffffff"></i></a>
         <a href="#"><i class="fa-brands fa-twitter" style="color: #ffffff"></i></a>
         <a href="#"><i class="fa-brands fa-instagram" style="color: #ffffff"></i></a>
