Agrego la animacion del logo en todas las paginas

--- a/pages/acercaDe.html
+++ b/pages/acercaDe.html
@@ -40,9 +40,9 @@
   <div class="header-container container-sm .container-md .container-xl">
     <header class="header">
       <div class="brand">
-        <a href="#"><img src="../img/logo2.png" alt="" class="brand-logo"></a>
-        <div class="brand-name">
-          <h2><a href="../index.html">LuzCámaraCrítica</a></h2>
+        <a href="../index.html"><img src="/img/logo2.png" alt="" class="brand-logo" />
+          <div class="brand-name">
+            <h2><span id="luz">Luz</span><span id="camara">Cámara</span><span id="critica">Crítica</span></a></h2>
         </div>
       </div>
       <nav class="menu">
