--- a/pages/registro.html
+++ b/pages/registro.html
@@ -38,9 +38,9 @@
 <body class="body-content-registro">
   <header class="header">
     <div class="brand">
-      <a href="../index.html"><img src="/img/logo2.png" alt="" class="brand-logo" /></a>
+      <a href="../index.html"><img src="/img/logo2.png" alt="" class="brand-logo" />
       <div class="brand-name">
-        <h2><a href="../index.html"><span id="luz">Luz</span><span id="camara">Cámara</span><span id="critica">Crítica</span></a></h2>
+        <h2><span id="luz">Luz</span><span id="camara">Cámara</span><span id="critica">Crítica</span></a></h2>
       </div>
     </div>
     <nav class="menu">
