--- a/pages/peliculas.html
+++ b/pages/peliculas.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,22 +8,14 @@
     <link rel="stylesheet" href="../css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap"
-      rel="stylesheet"
-    >
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Oswald:wght@200..700&display=swap"
-      rel="stylesheet"
-    >
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    >
+        href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Oswald:wght@200..700&display=swap"
+        rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
 <body class="body-content">
@@ -31,18 +24,19 @@
             <div class="brand">
                 <a href="../index.html"><img src="/img/logo2.png" alt="" class="brand-logo" />
                     <div class="brand-name">
-                        <h2><span id="luz">Luz</span><span id="camara">Cámara</span><span id="critica">Crítica</span></a></h2>
-                </div>
+                        <h2><span id="luz">Luz</span><span id="camara">Cámara</span><span id="critica">Crítica</span>
+                </a></h2>
             </div>
-            <nav class="menu">
-                <ul>
-                    <li><a href="../index.html">Inicio</a></li>
-                    <li><a href="acercaDe.html">Acerca de</a></li>
-                    <li><a href="series.html">Series</a></li>
-                    <li><a href="peliculas.html">Películas</a></li>
-                    <li><a href="registro.html">Registro</a></li>
-                </ul>
-            </nav>
-        </header>
+    </div>
+    <nav class="menu">
+        <ul>
+            <li><a href="../index.html">Inicio</a></li>
+            <li><a href="acercaDe.html">Acerca de</a></li>
+            <li><a href="series.html">Series</a></li>
+            <li><a href="peliculas.html">Películas</a></li>
+            <li><a href="registro.html">Registro</a></li>
+        </ul>
+    </nav>
+    </header>
     </div>
 </body>
