--- a/pages/registro.html
+++ b/pages/registro.html
@@ -2,143 +2,151 @@
 <html lang="es">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>LuzCámaraCrítica</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link
-  href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Oswald:wght@200..700&Jost:ital,wght@0,100..900;1,100..900&display=swap"
-  rel="stylesheet" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-  integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
-  <link rel="shortcut icon" href="favicon.ico" type="image/ico">
-  
-  <link rel="apple-touch-icon" sizes="57x57" href="/img/ico/apple-icon-57x57.png">
-  <link rel="apple-touch-icon" sizes="60x60" href="/img/ico/apple-icon-60x60.png">
-  <link rel="apple-touch-icon" sizes="72x72" href="/img/ico/apple-icon-72x72.png">
-  <link rel="apple-touch-icon" sizes="76x76" href="/img/ico/apple-icon-76x76.png">
-  <link rel="apple-touch-icon" sizes="114x114" href="/img/ico/apple-icon-114x114.png">
-  <link rel="apple-touch-icon" sizes="120x120" href="/img/ico/apple-icon-120x120.png">
-  <link rel="apple-touch-icon" sizes="144x144" href="/img/ico/apple-icon-144x144.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="/img/ico/apple-icon-152x152.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="/img/ico/apple-icon-180x180.png">
-  <link rel="icon" type="image/png" sizes="192x192"  href="/img/ico/android-icon-192x192.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/img/ico/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="96x96" href="/img/ico/favicon-96x96.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/img/ico/favicon-16x16.png">
-  <link rel="manifest" href="/img/ico/manifest.json">
-  <meta name="msapplication-TileColor" content="#ffffff">
-  <meta name="msapplication-TileImage" content="/img/ico/ms-icon-144x144.png">
-  <meta name="theme-color" content="#ffffff">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>LuzCámaraCrítica</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+        href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Oswald:wght@200..700&Jost:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
+    <link rel="shortcut icon" href="favicon.ico" type="image/ico">
 
-  <link rel="stylesheet" href="/css/style.css" />
+    <link rel="apple-touch-icon" sizes="57x57" href="/img/ico/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="/img/ico/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/img/ico/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/img/ico/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/img/ico/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/img/ico/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/img/ico/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/img/ico/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/img/ico/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="/img/ico/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/img/ico/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/img/ico/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/img/ico/favicon-16x16.png">
+    <link rel="manifest" href="/img/ico/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="/img/ico/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
+
+    <link rel="stylesheet" href="/css/style.css" />
 </head>
 
 <body class="body-content-registro">
-  <header class="header">
-    <div class="brand">
-      <a href="../index.html"><img src="/img/logo2.png" alt="" class="brand-logo" />
-      <div class="brand-name">
-        <h2><span id="luz">Luz</span><span id="camara">Cámara</span><span id="critica">Crítica</span></a></h2>
-      </div>
-    </div>
-    <nav class="menu">
-      <ul>
-        <li><a href="../index.html">Inicio</a></li>
-        <li><a href="acercaDe.html">Acerca de</a></li>
-        <li><a href="series.html">Series</a></li>
-        <li><a href="peliculas.html">Películas</a></li>
-        <li><a href="registro.html">Registro</a></li>
-      </ul>
-    </nav>
-  </header>
-  </div>
-
-  <main class="main-content-registro">
-
-    <div class="formulario">
-      <form id="registro" action="" method="post">
-        <h2>Formulario de Registro</h2>
-        <table>
-          <tr>
-            <div>
-              <td>Nombre:</td><td><input type="text" id="name" name="name"></td>
-              <td>Apellido:</td><td><input type="text" id="surname" name="surname"></td>
-            </div>
-          </tr>
-          <tr>
-            <div>
-              <td> Usuario:</td><td><input type="text" id="user" name="user"></td>
-              <td> Contraseña:</td><td><input type="password" id="password" name="password"></td>
-            </div>
-          </tr>
-          <tr>
-            <div>
-              <td> Correo:</td><td><input type="email" id="mail" name="mail"></td>
-              <td id="bd"> Fecha de <br> nacimiento:</td><td id="bdi"><input class="bd" type="date" id="birth" name="birth"></td>
-            </div>
-          </tr>
-        </table>
-
-        <div id="meeting">
-          <h3>¿Donde nos conociste?</h3>
-          <label for="recomendacion"><input type="radio" id="recomendacion" name="meeting"> Recomendación
-          </label>
-          <label for="google"><input type="radio" id="google" name="meeting"> Google
-          </label>
-          <label for="foro"><input type="radio" id="foro" name="meeting"> Foro
-          </label>
-          <label for="publicidad"><input type="radio" id="publicidad" name="meeting"> Publicidad
-          </label>
-          <label for="otros"><input type="radio" id="otros" name="meeting"> CAC 4.0
-          </label>
+    <header class="header">
+        <div class="brand">
+            <a href="../index.html"><img src="/img/logo2.png" alt="" class="brand-logo" />
+                <div class="brand-name">
+                    <h2><span id="luz">Luz</span><span id="camara">Cámara</span><span id="critica">Crítica</span>
+            </a></h2>
         </div>
-
-        <div>
-          <br><label for="comentarios">Comentarios: <br></label>
-          <textarea name="comentarios" id="comentarios" rows="4"></textarea>
         </div>
-        <br>
-        <label for="terminos"><input type="checkbox" id="terminos" name="terminos" required> He leído, entiendo y acepto la
-          POLÍTICA DE PRIVACIDAD para ser miembro. <br><a href="#">Terminos y Condiciones</a></label> <br>
-        <div class="div-boton-registro">
-          <button class="boton_registro" type="submit">Registrar</button>
+        <nav class="menu">
+            <ul>
+                <li><a href="../index.html">Inicio</a></li>
+                <li><a href="acercaDe.html">Acerca de</a></li>
+                <li><a href="series.html">Series</a></li>
+                <li><a href="peliculas.html">Películas</a></li>
+                <li><a href="registro.html">Registro</a></li>
+            </ul>
+        </nav>
+    </header>
+    </div>
+
+    <main class="main-content-registro">
+
+        <div class="formulario">
+            <form id="registro" action="" method="post">
+                <h2>Formulario de Registro</h2>
+                <table>
+                    <tr>
+                        <div>
+                            <td>Nombre:</td>
+                            <td><input type="text" id="name" name="name"></td>
+                            <td>Apellido:</td>
+                            <td><input type="text" id="surname" name="surname"></td>
+                        </div>
+                    </tr>
+                    <tr>
+                        <div>
+                            <td> Usuario:</td>
+                            <td><input type="text" id="user" name="user"></td>
+                            <td> Contraseña:</td>
+                            <td><input type="password" id="password" name="password"></td>
+                        </div>
+                    </tr>
+                    <tr>
+                        <div>
+                            <td> Correo:</td>
+                            <td><input type="email" id="mail" name="mail"></td>
+                            <td id="bd"> Fecha de <br> nacimiento:</td>
+                            <td id="bdi"><input class="bd" type="date" id="birth" name="birth"></td>
+                        </div>
+                    </tr>
+                </table>
+
+                <div id="meeting">
+                    <h3>¿Donde nos conociste?</h3>
+                    <label for="recomendacion"><input type="radio" id="recomendacion" name="meeting"> Recomendación
+                    </label>
+                    <label for="google"><input type="radio" id="google" name="meeting"> Google
+                    </label>
+                    <label for="foro"><input type="radio" id="foro" name="meeting"> Foro
+                    </label>
+                    <label for="publicidad"><input type="radio" id="publicidad" name="meeting"> Publicidad
+                    </label>
+                    <label for="otros"><input type="radio" id="otros" name="meeting"> CAC 4.0
+                    </label>
+                </div>
+
+                <div>
+                    <br><label for="comentarios">Comentarios: <br></label>
+                    <textarea name="comentarios" id="comentarios" rows="4"></textarea>
+                </div>
+                <br>
+                <label for="terminos"><input type="checkbox" id="terminos" name="terminos" required> He leído, entiendo
+                    y acepto la
+                    POLÍTICA DE PRIVACIDAD para ser miembro. <br><a href="#">Terminos y Condiciones</a></label> <br>
+                <div class="div-boton-registro">
+                    <button class="boton_registro" type="submit">Registrar</button>
+                </div>
+            </form>
         </div>
-      </form>
-    </div>
-  </main>
+    </main>
 
 
-  <footer>
-    <div class="legal">
-      <p class="copy">Copyright &copy 2024 Todos los derechos reservados</p>
-      <p><a href="#">Terminos y Condiciones</a></p>
-      <p><a href="#">Privacidad</a></p>
-    </div>
-    <div class="redes">
-      <p>LuzCámaraCrítica@gmail.com</p>
-      <a href="#"><i class="fa fa-envelope-o" style="color: #ffffff"></i></a>
-      <a href="#"><i class="fa-brands fa-twitter" style="color: #ffffff"></i></a>
-      <a href="#"><i class="fa-brands fa-instagram" style="color: #ffffff"></i></a>
-      <a href="#"><i class="fa-brands fa-facebook" style="color: #ffffff"></i></a>
-      <a href="#"><i class="fa-brands fa-linkedin" style="color: #ffffff"></i></a>
-      <a href="#"><i class="fa-brands fa-github" style="color: #ffffff"></i></a>
-    </div>
-  </footer>
+    <footer>
+        <div class="legal">
+            <p class="copy">Copyright &copy 2024 Todos los derechos reservados</p>
+            <p><a href="#">Terminos y Condiciones</a></p>
+            <p><a href="#">Privacidad</a></p>
+        </div>
+        <div class="redes">
+            <p>LuzCámaraCrítica@gmail.com</p>
+            <a href="#"><i class="fa fa-envelope-o" style="color: #ffffff"></i></a>
+            <a href="#"><i class="fa-brands fa-twitter" style="color: #ffffff"></i></a>
+            <a href="#"><i class="fa-brands fa-instagram" style="color: #ffffff"></i></a>
+            <a href="#"><i class="fa-brands fa-facebook" style="color: #ffffff"></i></a>
+            <a href="#"><i class="fa-brands fa-linkedin" style="color: #ffffff"></i></a>
+            <a href="#"><i class="fa-brands fa-github" style="color: #ffffff"></i></a>
+        </div>
+    </footer>
 
 
-  <script src="../js/index.js"></script>
-  <script src="https://kit.fontawesome.com/28b1a5ddfd.js" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
-  </script>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous">
-  </script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-    integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous">
-  </script>
+    <script src="../js/index.js"></script>
+    <script src="https://kit.fontawesome.com/28b1a5ddfd.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+        integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous">
+    </script>
 </body>
 
 </html>
