Eliminacion de Bootstrap y correccion de media queries

--- a/pages/acercaDe.html
+++ b/pages/acercaDe.html
@@ -37,28 +37,24 @@
 
 
 <body class="body-content about">
-    <div class="header-container container-sm .container-md .container-xl">
-        <header class="header">
-            <div class="brand">
-                <a href="../index.html"><img src="/img/logo2.png" alt="" class="brand-logo" />
-                    <div class="brand-name">
-                        <h2><span id="luz">Luz</span><span id="camara">Cámara</span><span id="critica">Crítica</span>
-                </a></h2>
-            </div>
-    </div>
-    <nav class="menu">
-        <ul>
-            <li><a href="../index.html">Inicio</a></li>
-            <li><a href="acercaDe.html">Acerca de</a></li>
-            <li><a href="series.html">Series</a></li>
-            <li><a href="peliculas.html">Películas</a></li>
-            <li><a href="registro.html">Registro</a></li>
-        </ul>
-    </nav>
+    <header class="header">
+        <div class="brand">
+            <a href="../index.html"><img src="/img/logo2.png" alt="" class="brand-logo" />
+                <div class="brand-name">
+                    <h2><span id="luz">Luz</span><span id="camara">Cámara</span><span id="critica">Crítica</span></h2>
+            </a>
+        </div>
+        </div>
+        <nav class="menu">
+            <ul>
+                <li><a href="../index.html">Inicio</a></li>
+                <li><a href="acercaDe.html">Acerca de</a></li>
+                <li><a href="series.html">Series</a></li>
+                <li><a href="peliculas.html">Películas</a></li>
+                <li><a href="registro.html">Registro</a></li>
+            </ul>
+        </nav>
     </header>
-    </div>
-
-
 
     <section class="main-content">
         <div class="acercaDe">
@@ -91,12 +87,9 @@
             </p>
         </div>
     </section>
-
     <div class="estudiantes">
-
         <p>Nosotros somos Estudiantes, Directores y Críticos de cine.</p>
     </div>
-
     <div class="gallery">
         <div class="image-container">
             <img src="../img/acercade/154818.png" alt="Personas sentadas en el cine">
@@ -140,25 +133,22 @@
         </div>
     </div>
 
-
-    <div>
-        <footer>
-            <div class="legal">
-                <p class="copy">Copyright &copy; 2024 Todos los derechos reservados</p>
-                <p><a href="#">Terminos y Condiciones</a></p>
-                <p><a href="#">Privacidad</a></p>
-            </div>
-            <div class="redes">
-                <p>eMail</p>
-                <a href="#"><i class="fa fa-envelope-o" style="color: #ffffff"></i></a>
-                <a href="#"><i class="fa-brands fa-twitter" style="color: #ffffff"></i></a>
-                <a href="#"><i class="fa-brands fa-instagram" style="color: #ffffff"></i></a>
-                <a href="#"><i class="fa-brands fa-facebook" style="color: #ffffff"></i></a>
-                <a href="#"><i class="fa-brands fa-linkedin" style="color: #ffffff"></i></a>
-                <a href="#"><i class="fa-brands fa-github" style="color: #ffffff"></i></a>
-            </div>
-        </footer>
-    </div>
+    <footer>
+        <div class="legal">
+            <p class="copy">Copyright &copy; 2024 Todos los derechos reservados</p>
+            <p><a href="#">Terminos y Condiciones</a></p>
+            <p><a href="#">Privacidad</a></p>
+        </div>
+        <div class="redes">
+            <p>eMail</p>
+            <a href="#"><i class="fa fa-envelope-o" style="color: #ffffff"></i></a>
+            <a href="#"><i class="fa-brands fa-twitter" style="color: #ffffff"></i></a>
+            <a href="#"><i class="fa-brands fa-instagram" style="color: #ffffff"></i></a>
+            <a href="#"><i class="fa-brands fa-facebook" style="color: #ffffff"></i></a>
+            <a href="#"><i class="fa-brands fa-linkedin" style="color: #ffffff"></i></a>
+            <a href="#"><i class="fa-brands fa-github" style="color: #ffffff"></i></a>
+        </div>
+    </footer>
 
     <script src="js/index.js"></script>
     <script src="https://kit.fontawesome.com/28b1a5ddfd.js" crossorigin="anonymous"></script>
