--- a/pages/registro.html
+++ b/pages/registro.html
@@ -39,7 +39,9 @@
         <div class="brand">
             <a href="../index.html"><img src="../img/logo2.png" alt="" class="brand-logo"></a>
             <div class="brand-name">
-                <a href="../index.html"><h2><span id="luz">Luz</span><span id="camara">Cámara</span><span id="critica">Crítica</span></h2></a>
+                <a href="../index.html">
+                    <h2><span id="luz">Luz</span><span id="camara">Cámara</span><span id="critica">Crítica</span></h2>
+                </a>
             </div>
         </div>
         <nav class="menu">
@@ -59,31 +61,24 @@
                 <h2>Formulario de Registro</h2>
                 <table>
                     <tr>
-                        <div>
-                            <td>Nombre:</td>
-                            <td><input type="text" id="name" name="name"></td>
-                            <td>Apellido:</td>
-                            <td><input type="text" id="surname" name="surname"></td>
-                        </div>
+                        <td>Nombre:</td>
+                        <td><input type="text" id="name" name="name"></td>
+                        <td>Apellido:</td>
+                        <td><input type="text" id="surname" name="surname"></td>
                     </tr>
                     <tr>
-                        <div>
-                            <td> Usuario:</td>
-                            <td><input type="text" id="user" name="user"></td>
-                            <td> Contraseña:</td>
-                            <td><input type="password" id="password" name="password"></td>
-                        </div>
+                        <td> Usuario:</td>
+                        <td><input type="text" id="user" name="user"></td>
+                        <td> Contraseña:</td>
+                        <td><input type="password" id="password" name="password"></td>
                     </tr>
                     <tr>
-                        <div>
-                            <td> Correo:</td>
-                            <td><input type="email" id="mail" name="mail"></td>
-                            <td id="bd"> Fecha de <br> nacimiento:</td>
-                            <td id="bdi"><input class="bd" type="date" id="birth" name="birth"></td>
-                        </div>
+                        <td> Correo:</td>
+                        <td><input type="email" id="mail" name="mail"></td>
+                        <td id="bd"> Fecha de <br> nacimiento:</td>
+                        <td id="bdi"><input class="bd" type="date" id="birth" name="birth"></td>
                     </tr>
                 </table>
-
                 <div id="meeting">
                     <h3>¿Donde nos conociste?</h3>
                     <label for="recomendacion"><input type="radio" id="recomendacion" name="meeting"> Recomendación
@@ -98,7 +93,7 @@
                     </label>
                 </div>
                 <div id="div_calificacion">
-                    <h3>¿Qué te parece esta página? </h3> 
+                    <h3>¿Qué te parece esta página? </h3>
                     <select name="calificacion" id="calificacion">
                         <option value="" disabled selected>Elija una opción</option>
                         <option value="1">Increible</option>
@@ -106,7 +101,7 @@
                         <option value="3">Sensacional</option>
                         <option value="4">Aprobada 100%</option>
                         <option value="5" disabled>No me gusta</option>
-                        
+
                     </select>
                 </div>
 
@@ -114,7 +109,7 @@
                     <br><label for="comentarios">Comentarios: <br></label>
                     <textarea name="comentarios" id="comentarios" rows="4"></textarea>
                 </div>
-                
+
                 <label for="terminos"><input type="checkbox" id="terminos" name="terminos" required> He leído, entiendo
                     y acepto la
                     POLÍTICA DE PRIVACIDAD para ser miembro. <br><a href="#">Terminos y Condiciones</a></label> <br>
