Algunas correcciones menores

--- a/pages/peliculas.html
+++ b/pages/peliculas.html
@@ -82,12 +82,12 @@
         <div class="redes">
             <p>LuzCámaraCrítica@gmail.com</p>
             <div class="social_links">
-                <a href="#"><i class="fa fa-envelope-o" style="color: #ffffff"></i></a>
-                <a href="#"><i class="fa-brands fa-twitter" style="color: #ffffff"></i></a>
-                <a href="#"><i class="fa-brands fa-instagram" style="color: #ffffff"></i></a>
-                <a href="#"><i class="fa-brands fa-facebook" style="color: #ffffff"></i></a>
-                <a href="#"><i class="fa-brands fa-linkedin" style="color: #ffffff"></i></a>
-                <a href="#"><i class="fa-brands fa-github" style="color: #ffffff"></i></a>
+                <a href="#"><i class="fa fa-envelope-o"></i></a>
+                <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="#"><i class="fa-brands fa-github"></i></a>
             </div>
         </div>
     </footer>
