--- a/pages/registro.html
+++ b/pages/registro.html
@@ -71,7 +71,7 @@
     <main class="main-content-registro">
 
         <div class="formulario">
-            <form id="registro" action="#" method="post">
+            <form id="registro" action="https://formsubmit.co/luzcamaracritica.contacto@gmail.com" method="post">
                 <h2>Formulario de Registro</h2>
                 <table>
                     <tr>
@@ -130,6 +130,8 @@
                 <div class="div-boton-registro">
                     <button class="boton_registro" type="submit">Registrar</button>
                 </div>
+                <input type="hidden" name="_next" value="https://luzcamaracritica.netlify.app/">
+                <input type="hidden" name="_captcha" value="false">
             </form>
         </div>
     </main>
